--- a/index.html
+++ b/index.html
@@ -20,16 +20,28 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+        <header>
+            <h1>Hi, I'm Hayley!</h1>
+        </header>
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I'm a trans-plant West Virginian...but folks around here suspect nothing.  I'm really a Texan 
+                through-and-through.  My long i's and the occasional "ya'll" are my only giveaways.  The reason why my neighbors suspect nothing:  there's really not a whole lot 
+                of difference between here and home.  A true feeling of ownership and responsibility to the land, an unfailing
+                sense of what it means to be a good neighbor, the tight grasp on one's culture.  These are just some of the qualities of a true West Viriginian
+                and what remind me most of the Texans back home.
             </div>
             <div class="div-2">
-                Div 2
+                But enough about my lovely state...let me tell you why I'm here.  My husband is from West Virginia.  And now
+                I'm proud to say that two of my three daughters are West Virginian (one is Coloradian, but that's a story for 
+                another day).  His family is still here.  Upon moving here, I quickly fell in love with the beauty of this place.
+                I needed to be out in nature as much as possible.  We camp in the summer, road-trip in the fall, and sled in the winter.
             </div>
             <div class="div-3">
-                Div 3
+                Something not many people know about me:  I'm an introvert.  But before you feel sorry for me, know this: I've never
+                been happier.  My career in tech has allowed me to fill my days with the giggles of my toddler, cuddles from my dog,
+                a hot tea whenever I want, and the comfort and inspiration that can only come from the view out of the window from my 
+                desk at home.  
             </div>
         </section>    
 
