Applied Flexbox values and personalizations

--- a/index.html
+++ b/index.html
@@ -15,34 +15,44 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">  
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header>
-            <h1>Hi, I'm Hayley!</h1>
-        </header>
         <section class="wrapper">
+            <header>
+                <h1>Hi. I'm Hayley.</h1>
+            </header>
+            <main>
+                <p>I'm a <strong>Responsive Designer & Developer</strong> who thrives on simple and sensible 
+                code. When I'm not working on a project or finding inspiration for new ideas, I'm camping, spending 
+                quality time with my close friends and family, or cozying up with a hot tea and a good book.</p>
+            </main>
             <div class="div-1">
-                I'm a trans-plant West Virginian...but folks around here suspect nothing.  I'm really a Texan 
-                through-and-through.  My long i's and the occasional "ya'll" are my only giveaways.  The reason why my neighbors suspect nothing:  there's really not a whole lot 
-                of difference between here and home.  A true feeling of ownership and responsibility to the land, an unfailing
+                <p><strong>About Me:</strong>  I'm a trans-plant West Virginian...but folks around here suspect nothing.  I'm really a Texan 
+                through-and-through.  West Virginians and Texans have alot in common:  A true feeling of ownership and responsibility to the land, an unfailing
                 sense of what it means to be a good neighbor, the tight grasp on one's culture.  These are just some of the qualities of a true West Viriginian
-                and what remind me most of the Texans back home.
+                and what remind me most of the Texans back home.</p>
             </div>
             <div class="div-2">
-                But enough about my lovely state...let me tell you why I'm here.  My husband is from West Virginia.  And now
+                <p><strong>More About Me:</strong>  But enough about my lovely state...let me tell you why I'm here.  My husband is from West Virginia.  And now
                 I'm proud to say that two of my three daughters are West Virginian (one is Coloradian, but that's a story for 
                 another day).  His family is still here.  Upon moving here, I quickly fell in love with the beauty of this place.
-                I needed to be out in nature as much as possible.  We camp in the summer, road-trip in the fall, and sled in the winter.
+                I needed to be out in nature as much as possible.  We camp in the summer, road-trip in the fall, and sled in the winter.</div>
             </div>
             <div class="div-3">
-                Something not many people know about me:  I'm an introvert.  But before you feel sorry for me, know this: I've never
+                <p><strong>Something Most People Don't Know About Me:</strong>  I'm an introvert.  But before you feel sorry for me, know this: I've never
                 been happier.  My career in tech has allowed me to fill my days with the giggles of my toddler, cuddles from my dog,
                 a hot tea whenever I want, and the comfort and inspiration that can only come from the view out of the window from my 
-                desk at home.  
+                desk at home.  </p>
             </div>
+            <footer>
+                <p>footer</p>
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
